Bug 1258567 - per comment 3, ensure volume is only applied once to the AudioSegment. r=kinetik. a=ritu

MozReview-Commit-ID: Bks59JySrep